--- a/m3/s1/progetto/assets/css/style.css
+++ b/m3/s1/progetto/assets/css/style.css
@@ -1,6 +1,22 @@
 .logo{
     font-weight: 700;
 }
+header{
+    height: 72px;
+}
+header input{
+    width: 150px;
+}
+header button{
+    background-color: rgb(41, 41, 255);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+}
+header button:hover{
+    background-color: dodgerblue;
+}
 main > div{
     width: 45%;
     background-color: rgb(218, 218, 218);
@@ -29,6 +45,27 @@ main > div{
 #div1{
     border-right: 2px solid white;
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.5);
+}
+#credit-div{
+    top: 10px;
+    right: 10px;
+    height: 34px;
+}
+#credit-div p{
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+    vertical-align: middle;
+}
+#credit-div button{
+    background-color: rgb(41, 41, 255);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+}
+#credit-div button:hover{
+    background-color: dodgerblue;
 }
 #div2{
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.5);
