--- a/m3/s2/progetto/progetto/src/app/pages/todo/todo.component.html
+++ b/m3/s2/progetto/progetto/src/app/pages/todo/todo.component.html
@@ -2,8 +2,33 @@
   <div id="todos-container">
     <div id="new-task-container">
       <form>
-        <input type="text" placeholder="Inserisci la task" [(ngModel)]="newTodoTitle" name="title">
-        <button (click)="creaTodo()">+</button>
+        <button (click)="addMicroTask(0)" [ngClass]="{'not-visible': microtasksShow[0]}">+</button>
+        <input type="text" placeholder="Inserisci la task e, se vuoi, le microtask (massimo 4)" [(ngModel)]="newTodoTitle" name="title">
+        <button (click)="creaTodo()" class="add-btn"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></button>
+
+        <div *ngIf="microtasksShow[0]">
+          <button class="first-btn" (click)="addMicroTask(1)" [ngClass]="{'not-visible': microtasksShow[1]}">+</button>
+          <input type="text" placeholder="Inserisci la microtask (1/4)" class="microtask" name="microtask1" [(ngModel)]="newTodoMicrotasks[0]">
+          <button (click)="removeMicroTask(0)" *ngIf="!microtasksShow[1]">-</button>
+        </div>
+
+        <div *ngIf="microtasksShow[1]">
+          <button class="first-btn" class="first-btn" (click)="addMicroTask(2)" [ngClass]="{'not-visible': microtasksShow[2]}">+</button>
+          <input type="text" placeholder="Inserisci la microtask (2/4)" class="microtask" name="microtask2" [(ngModel)]="newTodoMicrotasks[1]">
+          <button (click)="removeMicroTask(1)" *ngIf="!microtasksShow[2]">-</button>
+        </div>
+
+        <div *ngIf="microtasksShow[2]">
+          <button class="first-btn" class="first-btn" (click)="addMicroTask(3)" [ngClass]="{'not-visible': microtasksShow[3]}">+</button>
+          <input type="text" placeholder="Inserisci la microtask (3/4)" class="microtask" name="microtask3" [(ngModel)]="newTodoMicrotasks[2]">
+          <button (click)="removeMicroTask(2)" *ngIf="!microtasksShow[3]">-</button>
+        </div>
+
+        <div *ngIf="microtasksShow[3]">
+          <button class="first-btn not-visible">+</button>
+          <input type="text" placeholder="Inserisci la microtask (4/4)" class="microtask" name="microtask4" [(ngModel)]="newTodoMicrotasks[3]">
+          <button (click)="removeMicroTask(3)">-</button>
+        </div>
       </form>
     </div>
 
@@ -11,16 +36,33 @@
     <p *ngIf="emptyTodos">Ops, non è presente nessuna task</p>
 
     <div id="todos">
-      <div class="todo" *ngFor="let t of todos" [ngClass]="{'completed': t.completed}">
-        <div class="todo-info" (click)="completedToggle(t)">
-          <p class="todo-title">{{t.title}} <svg *ngIf="t.completed" fill="#00ff00" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></p>
-          <p class="todo-creation-date">{{(t.creationDate | date : "dd/MM/yyyy") + " - Completata: " + (t.completed ? (t.completionDate | date : "dd/MM/yyyy") : " no")}}</p>
+      <div class="todo-div" *ngFor="let t of todos, let i = index">
+        <div class="todo" [ngClass]="{'completed': t.completed}">
+          <div class="todo-info-div">
+            <p>
+              <svg *ngIf="!microtasksDivShow[i]" [ngClass]="{'not-visible': !(t.microtasks.length > 0)}" (click)="toggleShowMicrotasks(i)" xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+
+              <svg *ngIf="microtasksDivShow[i]" [ngClass]="{'not-visible': !(t.microtasks.length > 0)}" (click)="toggleShowMicrotasks(i)" xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+            </p>
+            <div class="todo-info" (click)="completedToggle(t)">
+              <p class="todo-title">{{t.title}} <svg *ngIf="t.completed" fill="#00ff00" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></p>
+              <p class="todo-creation-date">{{(t.creationDate | date : "dd/MM/yyyy") + " - Completata: " + (t.completed ? (t.completionDate | date : "dd/MM/yyyy") : " no")}}</p>
+            </div>
+          </div>
+          <div class="todo-buttons">
+            <a class="edit-btn" [routerLink]="'/todo/edit/' + t.id">
+              <svg fill="blue" xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"/></svg>
+            </a>
+            <button class="delete-btn" (click)="deleteTodo(t.id)">
+              <svg fill="red "xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"/></svg>
+            </button>
+          </div>
         </div>
-        <div class="todo-buttons">
-          <a class="edit-btn" [routerLink]="'/todo/edit/' + t.id">
-            <svg fill="blue" xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"/></svg>
-          </a>
-          <button class="delete-btn" (click)="deleteTodo(t.id)">
+        <div class="todo microtask-div" *ngFor="let m of t.microtasks, let index = index" [ngClass]="{'completed': m.completed || t.completed, 'd-none': !microtasksDivShow[i]}" (click)="completedMicrotaskToggle(i, m)">
+          <div>
+            <p>{{m.title}} <svg *ngIf="m.completed || m.completedTodo" fill="#00ff00" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></p>
+          </div>
+          <button class="delete-btn" (click)="deleteMicrotask(i, index)">
             <svg fill="red "xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"/></svg>
           </button>
         </div>
