--- a/m3/s2/progetto/progetto/src/app/components/header/header.component.html
+++ b/m3/s2/progetto/progetto/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <ul>
-      <li><a routerLink="/todo">Todo</a></li>
+      <li><a routerLink="/">Todo</a></li>
       <li><a routerLink="/completed">Completed</a></li>
     </ul>
   </nav>
