--- a/m3/s2/progetto/progetto/src/app/pages/todo-edit/todo-edit.component.html
+++ b/m3/s2/progetto/progetto/src/app/pages/todo-edit/todo-edit.component.html
@@ -2,21 +2,63 @@
   <div id="todos-container">
     <div id="new-task-container">
       <form>
+        <button (click)="addMicroTask(0)" [ngClass]="{'not-visible': microtasksShow[0]}">+</button>
         <input type="text" placeholder="Rinomina la task" [(ngModel)]="newTodoTitle" name="title">
-        <button (click)="updateTodo()"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></button>
+        <button (click)="updateTodo()" class="add-btn"><svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></button>
+
+        <div *ngIf="microtasksShow[0]">
+          <button class="first-btn" (click)="addMicroTask(1)" [ngClass]="{'not-visible': microtasksShow[1]}">+</button>
+          <input type="text" placeholder="Inserisci la microtask (1/4)" class="microtask" name="microtask1" [(ngModel)]="newTodoMicrotasks[0]">
+          <button (click)="removeMicroTask(0)" *ngIf="!microtasksShow[1]">-</button>
+        </div>
+
+        <div *ngIf="microtasksShow[1]">
+          <button class="first-btn" class="first-btn" (click)="addMicroTask(2)" [ngClass]="{'not-visible': microtasksShow[2]}">+</button>
+          <input type="text" placeholder="Inserisci la microtask (2/4)" class="microtask" name="microtask2" [(ngModel)]="newTodoMicrotasks[1]">
+          <button (click)="removeMicroTask(1)" *ngIf="!microtasksShow[2]">-</button>
+        </div>
+
+        <div *ngIf="microtasksShow[2]">
+          <button class="first-btn" class="first-btn" (click)="addMicroTask(3)" [ngClass]="{'not-visible': microtasksShow[3]}">+</button>
+          <input type="text" placeholder="Inserisci la microtask (3/4)" class="microtask" name="microtask3" [(ngModel)]="newTodoMicrotasks[2]">
+          <button (click)="removeMicroTask(2)" *ngIf="!microtasksShow[3]">-</button>
+        </div>
+
+        <div *ngIf="microtasksShow[3]">
+          <button class="first-btn not-visible">+</button>
+          <input type="text" placeholder="Inserisci la microtask (4/4)" class="microtask" name="microtask4" [(ngModel)]="newTodoMicrotasks[3]">
+          <button (click)="removeMicroTask(3)">-</button>
+        </div>
       </form>
     </div>
 
     <h1>Task</h1>
 
     <div id="todos">
-      <div class="todo" [ngClass]="{'completed': todo.completed}">
-        <div class="todo-info" (click)="completedToggle(todo)">
-          <p class="todo-title">{{todo.title}} <svg *ngIf="todo.completed" fill="#00ff00" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></p>
-          <p class="todo-creation-date">{{(todo.creationDate | date : "dd/MM/yyyy") + " - Completata: " + (todo.completionDate ? (todo.completionDate | date : "dd/MM/yyyy") : " no")}}</p>
+      <div class="todo-div">
+        <div class="todo" [ngClass]="{'completed': todo.completed}">
+          <div class="todo-info-div">
+            <p>
+              <svg *ngIf="!microtasksDivShow" [ngClass]="{'not-visible': !(todo.microtasks.length > 0)}" (click)="toggleShowMicrotasks()" xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+
+              <svg *ngIf="microtasksDivShow" [ngClass]="{'not-visible': !(todo.microtasks.length > 0)}" (click)="toggleShowMicrotasks()" xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+            </p>
+            <div class="todo-info" (click)="completedToggle(todo)">
+              <p class="todo-title">{{todo.title}} <svg *ngIf="todo.completed" fill="#00ff00" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></p>
+              <p class="todo-creation-date">{{(todo.creationDate | date : "dd/MM/yyyy") + " - Completata: " + (todo.completed ? (todo.completionDate | date : "dd/MM/yyyy") : " no")}}</p>
+            </div>
+          </div>
+          <div class="todo-buttons">
+            <button class="delete-btn" (click)="deleteTodo(todo.id)">
+              <svg fill="red "xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"/></svg>
+            </button>
+          </div>
         </div>
-        <div class="todo-buttons">
-          <button class="delete-btn" (click)="deleteTodo(todo.id)">
+        <div class="todo microtask-div" *ngFor="let m of todo.microtasks, let index = index" [ngClass]="{'completed': m.completed || todo.completed, 'd-none': !microtasksDivShow}" (click)="completedMicrotaskToggle(m)">
+          <div>
+            <p>{{m.title}} <svg *ngIf="m.completed || m.completedTodo" fill="#00ff00" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg></p>
+          </div>
+          <button class="delete-btn" (click)="deleteMicrotask(index)">
             <svg fill="red "xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"/></svg>
           </button>
         </div>
