--- a/m3/s3/progetto/progetto/src/app/components/header/header.component.html
+++ b/m3/s3/progetto/progetto/src/app/components/header/header.component.html
@@ -1,15 +1,13 @@
 <header class="d-flex justify-content-between align-items-center">
-  <p class="mb-0">WEATHER APP</p>
+  <a class="mb-0 text-white text-decoration-none first-link" routerLink="/">WEATHER APP</a>
 
   <div id="header-menu" class="overflow-hidden" [ngClass]="{'active': active}">
     <nav>
       <ul class="mb-0 ps-0 d-flex align-items-md-center">
-        <li><a routerLink="/" class="text-white">Home</a></li>
-        <li><a routerLink="/meteo" class="text-white">Meteo</a></li>
-        <li><input type="text" placeholder="Scegli la città"></li>
-        <li><button class="btn btn-outline-light" *ngIf="!isLogged">Login</button></li>
-        <li><button class="btn btn-outline-light" *ngIf="isLogged">Logout</button></li>
-        <!-- aggiungere link al login e pulsante per il logout -->
+        <li><a routerLink="/" class="text-white" (click)="toggleActive()">Home</a></li>
+        <li><a routerLink="/meteo" class="text-white" (click)="toggleActive()">Meteo</a></li>
+        <li><a class="btn btn-outline-light" routerLink="/auth/login" *ngIf="!isLogged" (click)="toggleActive()">Login</a></li>
+        <li><button class="btn btn-outline-light" *ngIf="isLogged" (click)="logout()">Logout</button></li>
       </ul>
     </nav>
   </div>
