--- a/m3/s3/progetto/progetto/src/app/components/header/header.component.scss
+++ b/m3/s3/progetto/progetto/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ header {
   color: white;
   height: 60px;
 
-  p {
+  .first-link {
     font-size: 1.5rem;
     font-weight: 700;
     margin-left: 15px;
@@ -20,7 +20,7 @@ header {
     z-index: 1;
 
     &.active {
-      height: 210.6px;
+      height: 166.4px;
       padding: 25px 15px;
       border-top: 1px solid white;
     }
@@ -30,7 +30,7 @@ header {
       flex-direction: column;
 
       li {
-        &:nth-child(1), &:nth-child(2), &:nth-child(3){
+        &:nth-child(1), &:nth-child(2){
           margin-bottom: 15px;
           @media screen and (min-width: 768px){
             margin-bottom: 0;
