--- a/m3/s3/progetto/progetto/src/app/components/header/header.component.scss
+++ b/m3/s3/progetto/progetto/src/app/components/header/header.component.scss
@@ -61,7 +61,7 @@ header {
       ul {
         flex-direction: row;
         li{
-          &:nth-child(1), &:nth-child(2), &:nth-child(3){
+          &:nth-child(1), &:nth-child(2){
             margin-right: 25px;
           }
         }
