--- a/m3/s3/progetto/progetto/src/app/pages/meteo/meteo.component.scss
+++ b/m3/s3/progetto/progetto/src/app/pages/meteo/meteo.component.scss
@@ -16,6 +16,12 @@
       color: white;
     }
   }
+  .view-link{
+    text-decoration: none;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
   h2{
     color: white;
     margin-top: 20px;
